src/components/home/Home.module.css
/* ... */
.stars4:after {
  content: " ";
  position: absolute;
  top: 2000px;
  width: 1px;
  height: 1px;
  background: transparent;
  box-shadow: inherit;
}

.subTitle {
  font-size: 1.5rem;
  z-index: 100;
  font-weight: 600;
  text-align: center;
}

.title {
  font-size: 6rem;
  z-index: 100;
  font-weight: 800;
  text-align: center;
}

.featureTitle {
  font-size: 1.5rem;
  z-index: 100;
}

.featureSubTitle {
  font-size: 1rem;
  z-index: 100;
  font-weight: 500;
}

.featureGrid {
  flex-direction: row;
}

.feature {
  flex-direction: column;
  flex: 1;
  justify-content: center;
  align-items: center;
}

.featureContent {
  text-align: center;
  flex-direction: column;
}

/* mobile */
@media (max-width: 30em) {
  .subTitle {
    font-size: 1.15rem !important;
  }

  .title {
    font-size: 2.5rem !important;
  }

  .starryBackground {
    padding: 5rem 0 !important;
  }

  .featureTitle {
    font-size: 1.2rem;
  }
}

/* tablet */
@media (max-width: 48em) {
  .subTitle {
    font-size: 1.3rem;
  }

  .starryBackground {
    padding: 7rem 0;
  }

  .featureGrid {
    flex-direction: column;
  }

  .feature {
    flex-direction: row;
    align-items: flex-start;
    justify-content: flex-start;
  }

  .featureContent {
    text-align: left;
  }
}

/* laptop */
@media (max-width: 64em) {
  .title {
    font-size: 4rem;
  }
}

